# ncaa-wsoc-analysis

./: .gitignore  README.md  generate_eda_plots.py  pyproject.toml  requirements.txt
data/: README.md
ncaa_wsoc/: __init__.py  balance.py  cli.py  config.py  io.py  records.py
ncaa_wsoc/charts/: __init__.py  histograms.py
notebooks/: README.md
scripts/: analyze_win_loss_balance.py
